<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".MainUserCreation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/switchTrack">

        <TextView
            android:id="@+id/MainUserCreationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/main_user_creation_title"
            android:textAlignment="center"
            android:textColor="@color/switchThumb"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/NameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="112dp"
            android:autofillHints="@string/name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:labelFor="@+id/NameEditText"
            android:textColor="@color/switchThumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MainUserCreationTitle" />

        <EditText
            android:id="@+id/HomeCountryEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="108dp"
            android:autofillHints="@string/country"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="text"
            android:labelFor="@+id/HomeCountryEditText"
            android:textColor="@color/switchThumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DOBEditText" />

        <EditText
            android:id="@+id/LanguagesEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="@string/languages"
            android:ems="10"
            android:hint="@string/languagesList"
            android:inputType="text"
            android:labelFor="@+id/LanguagesEditText"
            android:textColor="@color/switchThumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HomeCountryEditText" />

        <EditText
            android:id="@+id/DescriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/description_text"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_text"
            android:inputType="textMultiLine"
            android:labelFor="@+id/DescriptionEditText"
            android:textColor="@color/switchThumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LanguagesEditText"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/DOBEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="108dp"
            android:autofillHints="@string/dateFormat"
            android:ems="10"
            android:hint="@string/dateFormat"
            android:inputType="text"
            android:labelFor="@+id/DOBEditText"
            android:textColor="@color/switchThumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NameEditText" />

        <Button
            android:id="@+id/SelectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DescriptionEditText" />

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePathText" />

        <TextView
            android:id="@+id/imagePathText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/background1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SelectImageButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>