<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background1">

        <ImageView
            android:id="@+id/profilePictureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:text="@string/name"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePictureView" />

        <TextView
            android:id="@+id/ageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:text="@string/age"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInfo" />

        <TextView
            android:id="@+id/countryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:text="@string/country"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageInfo" />

        <TextView
            android:id="@+id/languageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:text="@string/languages_info"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryInfo" />

        <TextView
            android:id="@+id/descriptionInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:text="@string/description_info"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageInfo" />

        <Button
            android:id="@+id/rateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/rateUserEditText"
            app:layout_constraintTop_toBottomOf="@+id/ratingTextValue"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/nameInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:text="TextView"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameInfo"
            app:layout_constraintTop_toBottomOf="@+id/profilePictureView" />

        <TextView
            android:id="@+id/ageInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:text="TextView"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ageInfo"
            app:layout_constraintTop_toBottomOf="@+id/nameInfoValue" />

        <TextView
            android:id="@+id/countryInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:text="TextView"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryInfo"
            app:layout_constraintTop_toBottomOf="@+id/ageInfoValue" />

        <TextView
            android:id="@+id/languageInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="TextView"
            android:textColor="@color/switchThumb"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/languageInfo"
            app:layout_constraintTop_toBottomOf="@+id/countryInfoValue" />

        <TextView
            android:id="@+id/descriptionInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="10dp"
            android:text="TextView"
            android:textColor="@color/switchThumb"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toEndOf="@+id/descriptionInfo"
            app:layout_constraintTop_toBottomOf="@+id/languageInfoValue" />

        <EditText
            android:id="@+id/rateUserEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/rate_user"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="10dp"
            android:text="@string/currentRatingInfo"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ratingTextValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionInfo" />

        <TextView
            android:id="@+id/ratingTextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="68dp"
            android:text="TextView"
            android:textColor="@color/switchThumb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionInfoValue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>